--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </a>
       </div>
       <footer>
-        Feito com ♥ com a 
-        <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
+        Feito com a 
+        <a href="https://rocketseat.com.br/" target="_blank">Rocketseat ♥</a>
       </footer>
     </div>
     <script
